fix: API and TOC styles aligned with the new nav

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -1571,7 +1571,7 @@ $border-color: #d9d9d9;
     }
 
     &.affix {
-        margin-top: 125px;
+        margin-top: 85px;
         position: fixed;
         top: 0;
         z-index: 1015;
