--- a/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
+++ b/_buildApi/BuildAPI/docfx-tmpl/src/styles/docfx.css
@@ -18,7 +18,7 @@ body {
   nav.TK-Nav {
     position: sticky;
     position: -webkit-sticky;
-    top: -40px;
+    top: 0;
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
   }
